# The_AI_Revolution

./: README.md  predict.bat  pyproject.toml  train.bat
automated_test_prioritization/: automated_test_prioritization.py
input/: automated_test_prioritization.csv  train_test_case_predictor_0.csv
result/: automated_test_prioritization.joblib  train_test_case_predictor_1.joblib  train_test_case_predictor_3.joblib
train_test_case_predictor/: predict_test_case_result.py  test_case_predictor.joblib  train_test_case_predictor_1.py  train_test_case_predictor_2.py  train_test_case_predictor_3.py
