[project]
name = "predict-test-case-result"
version = "0.1.0"
description = "Python code to predict test case results base on historical data"
authors = [
    {name = "Ravi Bhushan Konduru",email = "Ravi_BhushanKonduru@cpr.ca"}
]
license = {text = "CPKC"}
readme = "README.md"
package-mode = false

requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
